feat: Refactor CORS configuration and update allowed origins